# Phishing-Detection-Using-ML

./: .coverage  .gitignore  .pylintrc  Dockerfile  README copy.md  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  run.py
data/: train.csv
models/: pfd.pkl
notebooks/: 01-download-dataset.ipynb  sambat_notebook.ipynb  test.ipynb  train-model.ipynb
scripts/: evaluate.py  run_extractor.py  run_scraper.py  train.py
src/: __init__.py
src/api/: main.py  model.py  schemas.py
src/config/: loader.py  logger.py  settings.yaml  types.py
src/models/: model.py
src/preprocess/: README.md  address_bar_features.py  content_features.py  decomposeURL.py  domain_features.py  extractor.py  preprocess.py  test.ipynb  url_features.py
src/training/: phishing_dataset.py  phishing_train.py
src/web/: app.py
tests/: conftest.py  test_api.py  test_loader.py  test_main_run.py  test_model.py
